--- a/package.json
+++ b/package.json
@@ -2,12 +2,25 @@
   "name": "vue-demo",
   "version": "1.0.0",
   "license": "MIT",
-  "dependencies": {
-    "live-server": "^1.2.0"
-  },
   "scripts": {
     "start": "live-server",
     "next": "git next",
-    "prev": "git prev"
+    "prev": "git prev",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+  },
+  "dependencies": {
+    "live-server": "^1.2.0",
+    "vue": "^2.5.16"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "vue-loader": "^15.0.9",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
