--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "live-server": "^1.2.0",
-    "vue": "^2.5.16"
+    "postcss-loader": "^2.1.5",
+    "postcss-scss": "^1.0.5",
+    "precss": "^3.1.2",
+    "vue": "^2.5.16",
+    "vue-material": "^1.0.0-beta-8"
   },
   "devDependencies": {
     "cross-env": "^5.1.4",
