--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-demo",
+  "name": "git-team-leader",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -14,6 +14,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-scss": "^1.0.5",
     "precss": "^3.1.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "vue": "^2.5.16",
     "vue-material": "^1.0.0-beta-8"
   },
