--- a/package.json
+++ b/package.json
@@ -6,21 +6,18 @@
     "start": "live-server",
     "next": "git next",
     "prev": "git prev",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "dependencies": {
     "live-server": "^1.2.0",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-hot-reload-api": "^2.3.0"
   },
   "devDependencies": {
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
-    "vue-loader": "^15.0.9",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.8.1",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "@vue/component-compiler-utils": "^1.3.0",
+    "parcel-bundler": "^1.8.1",
+    "pug": "^2.0.3",
+    "vue-template-compiler": "^2.5.16"
   }
 }
